recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:11: error: not found: value trianle
	if (level == 0){trianle(length) ; return}
                        ^